--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
 	<title>Trivia Game</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 </head>
 <body>
 	<div class="jumbotron" style="text-align: center;">
-		<h1 class="questions">Filler Text</h1>
+		<h1>The Trivia Game!</h1>
+		<h2 class="category">Choose your category:</h2>
 	</div>
+
+	<div class="container">
+		<div class = "row">
+			<h1 id="timerHolder" style="text-align: center;"></h1>
+		</div>
+
+		<div class="row" style="padding-bottom: 1.2%;">
+			<button type="button" class="btn btn-success btn-block btn-lg" id="button1">General (Easy)</button>
+		</div>
+
+		<div class="row" style="padding-bottom: 1.2%;">
+			<button type="button" class="btn btn-success btn-block btn-lg" id="button2">Animals (Medium)</button>
+		</div>
+
+		<div class="row" style="padding-bottom: 1.2%;">
+			<button type="button" class="btn btn-success btn-block btn-lg" id="button3">Mythology (Hard)</button>
+		</div>
+
+		<div class="row">
+			<button type="button" class="btn btn-success btn-block btn-lg" id="button4">Geography (Very Hard)</button>
+		</div>
+	</div>
+	<!-- Select your category! 7 questions -->
+	<!-- General, easy https://opentdb.com/api.php?amount=7&category=9&difficulty=easy&type=multiple -->
+	<!-- Animals, medium - https://opentdb.com/api.php?amount=7&category=27&difficulty=medium&type=multiple -->
+	<!-- Mythology, hard - https://opentdb.com/api.php?amount=7&category=20&difficulty=hard&type=multiple -->
 </body>
 </html>
